add get tree
